Gjort ferdig første og andre side, nå er det bare siste siden igjen

--- a/billettsalg.html
+++ b/billettsalg.html
@@ -24,6 +24,47 @@
             </ul>
         </header>
 
-</body>
+        <main>
+            <h1>Hei og velkommen til Sandefjord Aquarium!</h1>
+            <h3>Her finner du informasjon om priser på våre billetter</h3>
+
+            <div class="billett-container">
+                <div class="billett barnebillett">
+                    <h3>Barnebillett kr 49,-</h3>
+                     <p>Mellom 0-7år</p>
+                     <input type ="button" value="Kjøp her">
+                </div>
+
+                    <div class="billett ungdomsbillett">
+                        <h3>Ungdomsbillett kr 79,-</h3>
+                         <p>Opp til 17år</p>
+                         <input type ="button" value="Kjøp her">
+                    </div>
+
+                    <div class="billett voksenbillett">
+                        <h3>Voksenbillett kr 99,-</h3>
+                            <p>Har du barn under 7 år trenger du ikke kjøpe ekstra billett</p>
+                            <input type ="button" value="Kjøp her">
+                    </div>
+
+                    <div class="billett sesongbillett">
+                        <h3>Sesongkort for hele familien</h3>
+                            <p>Sesongkortet gjelder for hele sesongen for deg og din familie. ( 2voksne og ubegrenset barn)</p>
+                            <input type ="button" value="Kjøp her">
+                        </div>
+                </div>
+                <div class="bunntekst">
+                    <p>Når du bestiller billett gjelder denne for alle dager parken er åpen. Billetten er gyldig en sesong så pass på
+                        at den blir brukt. Også den perfekte julegave eller bursdagsgave og passer for alle!
+                    </p>
+                </div>
+                </main>
+                <footer>
+                    <p>©Sandefjord Aqarium</p>
+                    <img class="bubble-img" src="img/bubbles.png" alt="png of some small bubbles">
+                </footer>
+                
+            </div>
+        </body>
 
 </html>
