--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
             </p>
         </div>
         </section>
-        <div class="Lottie-animation">
-            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://assets1.lottiefiles.com/private_files/lf30_hTRn7a.json"  background="transparent"  speed="1"  style="width: 600px; height: 600px;"  loop controls autoplay></lottie-player>
-    </div>
         </main>
+        <footer class="Lottie-animation">
+            <p>©Sandefjord Aqarium</p>
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+            <lottie-player src="https://assets1.lottiefiles.com/private_files/lf30_hTRn7a.json"  background="transparent"  speed="0.75"  style="width: 600px; height: 600px;"  loop controls autoplay></lottie-player>
+        </footer>
     </div>
 </body>
 
