Sender opp nest siste interasjon av websiden. MBare små endringer gjenstår

--- a/billettsalg.html
+++ b/billettsalg.html
@@ -18,9 +18,9 @@
             <img class="logo" src="img/sealion-logo.png" alt="a small logo of a cartoon sealion">
             <h1> Sandefjord Akvarium</h1>
             <ul>
-                <li><a href="/index.html">Forside</a></li>
-                <li><a href="/billettsalg.html">Kjøp Billetter</a></li>
-                <li><a href="/Kontakt-oss.html">Kontakt oss</a></li>
+                <li><a class="top-link" href="/index.html">Forside</a></li>
+                <li><a class="top-link" href="/billettsalg.html">Kjøp billetter</a></li>
+                <li><a class="top-link" href="/Kontakt-oss.html">Kontakt oss</a></li>
             </ul>
         </header>
 
@@ -31,13 +31,16 @@
             <div class="billett-container">
                 <div class="billett barnebillett">
                     <h3>Barnebillett kr 49,-</h3>
-                     <p>Mellom 0-7år</p>
+                     <p>Mellom 0-7år. Gøy for barna å se og lære om undervannslivet, og hvor viktig dyretlivet er.
+                     </p>
                      <input type ="button" value="Kjøp her">
                 </div>
 
                     <div class="billett ungdomsbillett">
                         <h3>Ungdomsbillett kr 79,-</h3>
-                         <p>Opp til 17år</p>
+                         <p>Opp til 17år. Her er vår ungdomsbillett, første utfordringen
+                            er å få dem ut av huset.
+                         </p>
                          <input type ="button" value="Kjøp her">
                     </div>
 
