--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img class="logo" src="img/sealion-logo.png" alt="a small logo of a cartoon sealion">
             <h1> Sandefjord Akvarium</h1>
             <ul>
-                <li><a href="/index.html">Forside</a></li>
-                <li><a href="/billettsalg.html">Kjøp Billetter</a></li>
-                <li><a href="/Kontakt-oss.html">Kontakt oss</a></li>
+                <li><a class="top-link" href="/index.html">Forside</a></li>
+                <li><a class="top-link" href="/billettsalg.html">Kjøp billetter</a></li>
+                <li><a class="top-link" href="/Kontakt-oss.html">Kontakt oss</a></li>
             </ul>
         </header>
 
@@ -30,7 +30,7 @@
             <section class="section-one">
                 <img class="sect1-image 1" src="img/sealion-water.jpg" alt="a sealion swimming in marine blue water with its head sticking up">
                 <img class="sect1-image 2" src="img/sealion-show.jpg" alt="a man standing on the pool edge, feeding two sealions">
-                <div class=sect1-text>
+                <div class=sect-text>
                     <h2> Sjøløve show</h2>
                     <p>
                         Velkommen til Sjøløve show for hele familien.  Her kan både barn og voksne svømme med
@@ -43,11 +43,23 @@
             <section class="section-two">
                 <img class="sect2-image 1" src="img/Aquarium.jpg" alt="Looking into a coral reef aquarium with fishes swimming">
                 <img class="sect2-image 2" src="img/family-aquarium.jpg" alt="A family standing infront of an aquarium looking in">
-                <div class=sect2-text>
+                <div class=sect-text>
                     <h2> 250.000 Liter tank</h2>
                     <p>
                         Med over 70 forskjellige arter er det noe å se for hele familien, mange av disse er utryddningstruet og vi jobber mot å 
                         få opp bestanden. Garantert noe for både store og små, spennende koraller og flotte farger.
+                    </p>
+                </div>
+            </section>
+
+            <section class="section-three">
+                <img class="sect3-image sect3-image1" src="img/shark-aquarium.jpg" alt="a shark swimming inside of a aquarium tank">
+                <img class="sect3-image sect3-image2" src="img/child-dolphin.jpg" alt="Children looking at a dolphin in a aquarium tank">
+                <div class=sect-text>
+                    <h2> Moro for store og små</h2>
+                    <p>
+                        Hos Sandefjord Aquarium er det mye morsomt å se på for både store og små. Her kan man lære om fiskens originale habitat
+                        og se hvordan den lever naturlig i en av norges største vannparker.
                     </p>
                 </div>
             </section>
