Sender opp siste oppdatering nå. Alt er ferdig

--- a/Kontakt-oss.html
+++ b/Kontakt-oss.html
@@ -20,9 +20,9 @@
             <img class="logo" src="img/sealion-logo.png" alt="a small logo of a cartoon sealion">
             <h1> Sandefjord Akvarium</h1>
             <ul>
-                <li><a href="/index.html">Forside</a></li>
-                <li><a href="/billettsalg.html">Kjøp Billetter</a></li>
-                <li><a href="/Kontakt-oss.html">Kontakt oss</a></li>
+                <li><a class="top-link" href="/Forside.html">Forside</a></li>
+                <li><a class="top-link" href="/billettsalg.html">Kjøp billetter</a></li>
+                <li><a class="top-link" href="/Kontakt-oss.html">Kontakt oss</a></li>
             </ul>
         </header>
         <main >
