--- a/billettsalg.html
+++ b/billettsalg.html
@@ -18,7 +18,7 @@
             <img class="logo" src="img/sealion-logo.png" alt="a small logo of a cartoon sealion">
             <h1> Sandefjord Akvarium</h1>
             <ul>
-                <li><a class="top-link" href="/index.html">Forside</a></li>
+                <li><a class="top-link" href="/Forside.html">Forside</a></li>
                 <li><a class="top-link" href="/billettsalg.html">Kjøp billetter</a></li>
                 <li><a class="top-link" href="/Kontakt-oss.html">Kontakt oss</a></li>
             </ul>
@@ -56,13 +56,14 @@
                             <input type ="button" value="Kjøp her">
                         </div>
                 </div>
-                <div class="bunntekst">
+                <div class="billett_info_txt">
                     <p>Når du bestiller billett gjelder denne for alle dager parken er åpen. Billetten er gyldig en sesong så pass på
                         at den blir brukt. Også den perfekte julegave eller bursdagsgave og passer for alle!
                     </p>
                 </div>
                 </main>
                 <footer>
+                    <!-- Denne har jeg gjort en liten animasjon på som ikke skal være veldig distraherende-->
                     <p>©Sandefjord Aqarium</p>
                     <img class="bubble-img" src="img/bubbles.png" alt="png of some small bubbles">
                 </footer>
